# waves_gRPC

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Makefile  Readme.md  compose-cpp-perf-test.yml  compose-ghz-perf-test.yml  compose-gtest.yml  compose-python.yml  index.html  num_results.md  wave_grpc.proto  wave_types.proto  waves.proto
cpp_client/: CMakeLists.txt
cpp_server/: CMakeLists.txt
debian-grpc/: Dockerfile
demo_cpp_hello_world/: .dockerignore  CMakeLists.txt  Makefile  Readme.md  fetch_examples.sh  greeter_async_client.cc  greeter_async_client2.cc  greeter_async_client_loop.cc  greeter_async_server.cc  greeter_client.cc  greeter_sync_client.cc  greeter_sync_client.hh  greeter_sync_client_main.cc  greeter_sync_server.cc  greeter_sync_server.hh  greeter_sync_server_main.cc  test_server.cpp  tests.cpp
demo_cpp_hello_world/compose_demo/: docker-compose.yml
demo_cpp_hello_world/compose_test/: docker-compose.yml
demo_cpp_hello_world/docker_sync_client/: Dockerfile
demo_cpp_hello_world/docker_sync_server/: Dockerfile
demo_cpp_hello_world/docker_sync_test/: Dockerfile
demo_cpp_wave/: CMakeLists.txt  Dockerfile  FlatDiscreteDirectionalWaveSpectrum.hpp  Makefile  Readme.md  compose-ghz-perf-test.yml  compose-gtest.yml  compose_demo.yml  compose_ghz.yml  compose_test.yml  num_results.md  readSpectrumFromHdf5.py  wave.proto  wave_client.cc  wave_client.hh  wave_client_main.cc  wave_server.cc  wave_test.cc
demo_cpp_wave/compose_demo/: docker-compose.yml
demo_cpp_wave/compose_ghz/: docker-compose.yml
demo_cpp_wave/compose_test/: docker-compose.yml
demo_cpp_wave/debian-grpc/: Dockerfile
demo_cpp_wave/docker_wave_client/: Dockerfile
demo_cpp_wave/docker_wave_ghz/: Dockerfile
demo_cpp_wave/docker_wave_server/: Dockerfile
demo_cpp_wave/docker_wave_test/: Dockerfile  wave_client.hh
demo_cpp_wave/gtest/: CMakeLists.txt  Dockerfile
demo_cpp_wave/ssc/: Exception.cpp  NumericalErrorException.hpp
demo_cpp_wave/wave_client/: wave_client_main.cc
ghz/: Dockerfile
gtest/: CMakeLists.txt  Dockerfile  wave_client.cc  wave_test.cc
pandoc/: Dockerfile
pylama/: Dockerfile  Makefile
python_client/: Dockerfile  Makefile  waves.py
python_server/: Dockerfile  Makefile  airy.py  server.py  wave_model_interface.py  waves.proto  waves.py
wave_client/: Dockerfile  wave_client_main.cc
wave_server/: Dockerfile  wave_server.cc
